<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main.MainActivity">
    <item android:id="@+id/action_profile"
        android:title="@string/action_profile"
        android:orderInCategory="100"
        android:icon="@drawable/ic_account_circle_white_24dp"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="200"
        app:showAsAction="never" />

    <item android:id="@+id/action_about"
        android:orderInCategory="300"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item android:id="@+id/action_app_invites"
        android:orderInCategory="300"
        android:title="@string/action_app_invites"
        app:showAsAction="never" />

</menu>
