<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.but_app.but.Activity.AboutActivity">

    <include layout="@layout/tool_bar"
        android:id="@+id/toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/version"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_below="@id/toolbar"
        android:text="@string/version"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/developed"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_below="@id/version"
        android:text="@string/developed_by"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/developed"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:id="@+id/hernando"
        android:text="@string/hernando"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_below="@id/hernando"
        android:textColor="@color/black"
        android:id="@+id/lucas"
        android:text="@string/lucas"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/art"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/art"
        android:layout_below="@+id/lucas"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:id="@+id/leila"
        android:textSize="14sp"
        android:layout_marginTop="5dp"
        android:text="@string/leila"
        android:layout_below="@+id/art"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
